==== version history of open-console-core

version 0.02:
	Fixes:
	- requiredParams not always lines, may be text or other.

	Improvements:
	- add ::Util::domain_suffix()
	- add ::Proof::Website::hostUTF8()
	- ::Util token work
	- introduce more abstract Asset, which takes most of Proof
	- simplify use of schema (object version)
	- promote unique tokens to replace database id
	- uniform load/remove/save
	- identity ownership only as sub-set of Account
	- encryption of secrets into ::Util
	- add ::Util::duration()
	- add ::Util::now()

version 0.01: Wed Sep 09 09:21:50 PM CEST 2024
	- Initial